@@ -7,10 +7,10 @@
 #include <RInside.h>                    // for the embedded R via RInside
 
 // a c++ function we wish to expose to R
-const char* hello( std::string who ){
+std::string hello( std::string who ){
     std::string result( "hello " ) ;
     result += who ;
-    return result.c_str() ;
+    return result;
 } 
 
 int main(int argc, char *argv[]) {
@@ -19,14 +19,11 @@ int main(int argc, char *argv[]) {
     RInside R(argc, argv);               
 
     // expose the "hello" function in the global environment
-    //R["hello"] = Rcpp::InternalFunction( &hello ) ;
+    R["hello"] = Rcpp::InternalFunction( &hello ) ;
    
     // call it and display the result
-    Rcpp::Rcout << "** rinside_sample9 is currently disabled.\n";
-    if (FALSE) {
-	std::string result = R.parseEvalNT("hello(\"world\")") ;
-	std::cout << "hello( 'world') =  " << result << std::endl ; 
-    }
+    std::string result = R.parseEvalNT("hello(\"world\")") ;
+    std::cout << "hello( 'world') =  " << result << std::endl ; 
 
     exit(0);
 }
